UI: fix scrollbar disappearing when scrolling with mouse outside of tracker

--- a/core/src/css/component/decktracker/overlay/decktracker-deck-list.component.scss
+++ b/core/src/css/component/decktracker/overlay/decktracker-deck-list.component.scss
@@ -76,8 +76,7 @@
 				}
 			}
 			.ps:hover > .ps__rail-y,
-			.ps--focus > .ps__rail-y,
-			.ps.ps--scrolling-y > .ps__rail-y {
+			.ps--focus > .ps__rail-y {
 				opacity: 0.01;
 			}
 		}
